<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Animales">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:text="@string/titulo5"
        android:textSize="40dp"
        android:textColor="@color/pink"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnHorse"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulo12"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/pink"/>

    <Button
        android:id="@+id/btnDog"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulo13"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/pink"/>

    <Button
        android:id="@+id/btnTortoise"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulo14"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/pink"/>



























</LinearLayout>