<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculadora"
    android:orientation="vertical"
    android:background="@color/piel">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo35"
        android:textSize="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/EditNumero1"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="60dp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/EditNumero2"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="6dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSuma"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:text="@string/titulo60"
            android:textSize="30dp"
            android:layout_marginHorizontal="20dp"/>

        <Button
            android:id="@+id/btnResta"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/titulo61"
            android:textSize="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp" />

        <Button
            android:id="@+id/btnMultiplica"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/titulo62"
            android:textSize="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"/>

        <Button
            android:id="@+id/btnDivi"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/titulo63"
            android:textSize="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"/>

    </LinearLayout>


    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textResultadoCalcu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo59"
            android:textSize="45sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:gravity="center"/>




    </LinearLayout>

    <Button
        android:id="@+id/btnSiguienteCalcu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/titulo58"
        android:textSize="25sp"
        android:textColor="@color/piel"
        android:backgroundTint="@color/white"/>

</LinearLayout>

