<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuApp"
    android:background="@drawable/storytelling"
    >


    <TextView
        android:id="@+id/textMenu"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/titulo3"
        android:textColor="@color/white"
        android:textSize="65dp" />

    <Button
        android:id="@+id/btnColores"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/titulo4"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/pastel"/>

        <Button
            android:id="@+id/btnAnimales"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:text="@string/titulo5"
            android:textSize="40dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/pastel"/>

            <Button
                android:id="@+id/btnFrutas"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:text="@string/titulo6"
                android:textSize="40dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/pastel"/>










</LinearLayout>