<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuAprenderJugar"
    android:background="@drawable/storytelling">


    <TextView
        android:id="@+id/textMenú"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo3"
        android:textSize="65dp"
        android:textColor="@color/pastel"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"/>


    <Button
        android:id="@+id/btnAprender"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:text="@string/titulo20"
        android:textSize="45dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@color/black"/>

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/titulo21"
        android:textSize="45dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@color/pink"/>

    <Button
        android:id="@+id/btnAsig"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/titulo53"
        android:textSize="45dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@color/pink"/>











</LinearLayout>








