<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ActivityAnimales"
    android:background="@color/pastel">


  <TextView
      android:id="@+id/textAnimales"
      android:layout_width="200dp"
      android:layout_height="100dp"
      android:layout_gravity="center"
      android:layout_marginTop="60dp"
      android:text="@string/titulo11"
      android:textSize="48dp" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:orientation="horizontal">
    <ImageView
        android:id="@+id/imagedog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="35dp"
        android:src="@drawable/dog"/>

    <TextView
        android:id="@+id/textDog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/titulo13"
        android:textSize="60dp"
        android:layout_margin="40dp"/>

  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:orientation="horizontal">
    <ImageView
        android:id="@+id/imageHorse"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="35dp"
        android:src="@drawable/caballo"/>

    <TextView
        android:id="@+id/textHorse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/titulo12"
        android:textSize="50dp"
        android:layout_margin="40dp"/>

  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:orientation="horizontal">
    <ImageView
        android:id="@+id/imageTortoise"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="35dp"
        android:src="@drawable/tortuga"/>

    <TextView
        android:id="@+id/textTortoise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/titulo14"
        android:textSize="50dp"
        android:layout_margin="40dp"/>

  </LinearLayout>
  </LinearLayout>