<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Colores"
    android:background="@color/pastel">

    <TextView
        android:id="@+id/textColores"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/titulo7"
        android:textSize="55dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageNegro"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="35dp"
            android:src="@color/black" />

        <TextView
            android:id="@+id/textBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/titulo10"
            android:textSize="50dp"
            android:layout_margin="40dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageRosado"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="35dp"
            android:src="@color/pink" />

        <TextView
            android:id="@+id/textPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/titulo9"
            android:textSize="50dp"
            android:layout_margin="40dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageBlanco"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="35dp"
            android:src="@color/white" />

        <TextView
            android:id="@+id/textWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/titulo8"
            android:textSize="50dp"
            android:layout_margin="40dp"/>

    </LinearLayout>













































</LinearLayout>