<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityFrutas"
    android:background="@color/pastel">


    <TextView
        android:id="@+id/textFrutas"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/titulo15"
        android:textSize="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageManzana"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="35dp"
            android:src="@drawable/manzana" />

        <TextView
            android:id="@+id/textAple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/titulo17"
            android:textSize="45dp"
            android:layout_margin="45dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageStrawberry"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="35dp"
            android:src="@drawable/fresa"/>

        <TextView
            android:id="@+id/textStrawberry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/titulo16"
            android:textSize="50dp"
            android:layout_margin="40dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imagePapaya"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="35dp"
            android:src="@drawable/papaya" />

        <TextView
            android:id="@+id/textPapaya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/titulo18"
            android:textSize="50sp"
            android:layout_margin="40dp"/>

    </LinearLayout>

























</LinearLayout>